--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryLight">#6C47BB</color>
+    <color name="colorPrimaryLight">#9869FC</color>
     <color name="colorPrimary">#FF5B3F91</color>
     <color name="colorPrimaryDark">#423164</color>
     <color name="colorAccent">#ff5757</color>
