--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -2,17 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="2dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="2dp"
+    android:padding="10dp"
     android:gravity="center_horizontal"
     android:orientation="vertical">
-
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:text="@string/about"
         android:layout_weight="1" />
 
 </LinearLayout>
