--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -3,71 +3,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/t1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/contact"
-        android:textSize="20sp"/>
-
-
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/t1"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="40dp"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/address"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp"/>
-
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/phone"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/contact"
-        android:layout_width="32dp"
-        android:layout_height="44dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_below="@id/t1"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/logo"
         app:srcCompat="@drawable/ic_contact" />
+
+    <TextView
+        android:id="@+id/address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/contact"
+        android:layout_alignBottom="@+id/contact"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@+id/contact"
+        android:gravity="center_vertical"/>
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="32dp"
-        android:layout_height="28dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_below="@id/contact"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/logo"
         app:srcCompat="@drawable/ic_phone" />
+
+    <TextView
+        android:id="@+id/phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageView4"
+        android:layout_alignBottom="@+id/imageView4"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@+id/imageView4"
+        android:gravity="center_vertical"/>
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="35dp"
-        android:layout_height="26dp"
+        android:layout_height="35dp"
         android:layout_below="@id/phone"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/logo"
         app:srcCompat="@drawable/ic_email" />
+
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageView5"
+        android:layout_alignBottom="@+id/imageView5"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@+id/imageView5"
+        android:gravity="center_vertical" />
 
 
 </RelativeLayout>
