--- a/app/src/main/res/layout/address.xml
+++ b/app/src/main/res/layout/address.xml
@@ -7,7 +7,7 @@
         android:id="@+id/button1"
         android:layout_width="408dp"
         android:layout_height="67dp"
-        android:layout_marginLeft="3dp"
+        android:layout_marginStart="3dp"
         android:layout_marginTop="5dp"
         android:backgroundTint="#00A59090"
         android:onClick="displayToast"
