--- a/app/src/main/res/layout/activity_my_addresses.xml
+++ b/app/src/main/res/layout/activity_my_addresses.xml
@@ -4,13 +4,17 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="408dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="5dp"
-        android:backgroundTint="#00A59090"
-        android:shadowColor="#00B19191"
+        android:id="@+id/addBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:drawableStart="@drawable/ic_add_address"
+        android:drawablePadding="10dp"
+        android:gravity="start|center_vertical"
         android:text="@string/addButton"
+        android:textAllCaps="false"
         android:textColor="@android:color/black" />
+
 </RelativeLayout>
