--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimary">#FF5B3F91</color>
     <color name="colorPrimaryDark">#423164</color>
     <color name="colorAccent">#ff5757</color>
-    <color name="colorGrey">#E9E9E9</color>
+    <color name="colorGrey">#cccccc</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
 </resources>
