--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,17 +16,29 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-<!--            <ImageView-->
-<!--                android:layout_width="300dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/logo1"/>-->
-        </androidx.appcompat.widget.Toolbar>
-        <androidx.appcompat.widget.SearchView
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        <RelativeLayout
+            android:id="@+id/relLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:queryHint="@string/search_hint"
-            android:outlineSpotShadowColor="@color/cardview_light_background" />
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/white_border"
+            android:elevation="10dp">
+
+            <EditText
+                android:id="@+id/input_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:background="@null"
+                android:hint="@string/search_hint"
+                android:imeOptions="actionSearch"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:textColor="@android:color/black"
+                android:textSize="15sp" />
+        </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
