--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -20,16 +21,19 @@
                 android:id="@+id/login_back"
                 android:layout_width="30dp"
                 android:layout_height="150dp"
-                android:layout_alignLeft="@id/title_verify"
+                android:layout_alignStart="@id/title_verify"
+                android:contentDescription="@string/previous_activity"
                 android:src="@drawable/ic_cancel" />
 
             <TextView
                 android:id="@+id/title_verify"
                 android:layout_width="1000dp"
                 android:layout_height="150dp"
-                android:text="Verify"
+                android:layout_centerVertical="true"
+                android:text="@string/title_verify"
                 android:textAlignment="center"
-                android:textSize="30dp"/>
+                android:textColor="@android:color/white"
+                android:textSize="30sp" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -42,10 +46,10 @@
             android:id="@+id/txt_verification"
             android:layout_width="250dp"
             android:layout_height="80dp"
+            android:gravity="center"
             android:padding="10dp"
-            android:text="@string/txtVerify"
-            android:textAlignment="center"
-            android:textSize="15dp"
+            android:text="@string/txt_verify"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
@@ -57,24 +61,26 @@
             android:id="@+id/txt_code"
             android:layout_width="60dp"
             android:layout_height="50dp"
-            android:hint="0000"
+            android:autofillHints=""
+            android:gravity="center"
+            android:hint="@string/hint_code"
             android:inputType="textFilter|number"
-            android:textAlignment="center"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.204" />
+            app:layout_constraintVertical_bias="0.204"
+            tools:targetApi="o" />
 
         <Button
             android:id="@+id/btn_verify"
-            android:layout_width="220dp"
+            android:layout_width="390dp"
             android:layout_height="50dp"
-            android:text="Verify"
-            android:textAlignment="center"
+            android:gravity="center"
+            android:text="@string/btn_verify"
             android:textColor="@android:color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
