--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,11 +27,10 @@
 
             <TextView
                 android:id="@+id/title_login"
-                android:layout_width="1000dp"
-                android:layout_height="150dp"
-                android:layout_centerVertical="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="@string/title_login"
-                android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="30sp" />
         </RelativeLayout>
@@ -63,8 +62,9 @@
             android:layout_height="50dp"
             android:autofillHints=""
             android:gravity="center"
-            android:hint="@string/hint_phone"
+            android:hint="@string/hint_mobile"
             android:inputType="phone"
+            android:maxLength="11"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,6 +77,7 @@
             android:id="@+id/btn_next"
             android:layout_width="390dp"
             android:layout_height="50dp"
+            android:background="@android:color/darker_gray"
             android:gravity="center"
             android:text="@string/btn_next"
             android:textColor="@android:color/white"
