--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -27,11 +27,11 @@
 
             <TextView
                 android:id="@+id/title_verify"
-                android:layout_width="1000dp"
-                android:layout_height="150dp"
-                android:layout_centerVertical="true"
-                android:text="@string/title_verify"
-                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+
+                android:text="@string/verify"
                 android:textColor="@android:color/white"
                 android:textSize="30sp" />
         </RelativeLayout>
@@ -65,6 +65,7 @@
             android:gravity="center"
             android:hint="@string/hint_code"
             android:inputType="textFilter|number"
+            android:maxLength="4"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,8 +78,9 @@
             android:id="@+id/btn_verify"
             android:layout_width="390dp"
             android:layout_height="50dp"
+            android:background="@android:color/darker_gray"
             android:gravity="center"
-            android:text="@string/btn_verify"
+            android:text="@string/verify"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
