--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -52,12 +52,10 @@
     <GridView
         android:id="@+id/expandableLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/image"
-        android:layout_marginBottom="1dp"
         android:layout_centerHorizontal="true"
         android:verticalSpacing="10dp"
-        android:numColumns="3"
-        android:padding="16dp">
+        android:numColumns="auto_fit">
     </GridView>
 </RelativeLayout>
