--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="colorGrey">#cccccc</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="cardview_shadow_end_colour">#03000000</color>
+    <color name="temp">#b19cd9</color>
 
 </resources>
