--- a/app/src/main/res/layout/activity_google_maps.xml
+++ b/app/src/main/res/layout/activity_google_maps.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:src="@drawable/ic_search" />
+            android:src="@drawable/ic_search_black" />
 
         <AutoCompleteTextView
             android:id="@+id/input_search"
