--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,164 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ProductActivity"
-        android:background="@color/cardview_shadow_end_color">
+    android:layout_height="match_parent"
+    android:background="@color/cardview_shadow_end_colour"
+    tools:context=".ProductActivity">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="434dp"
-            android:layout_height="68dp"
-            android:background="@color/colorPrimary"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="70dp">
-
-
-                <ImageView
-                    android:id="@+id/back"
-                    android:layout_width="30dp"
-                    android:layout_height="140dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_back"
-                    android:contentDescription="@string/previous_activity" />
-
-                <TextView
-                    android:id="@+id/title_product"
-                    android:layout_width="325dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="Nestle Fruita Vitals Pineapple"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="20sp" />
-
-                <ImageView
-                    android:id="@+id/search"
-                    android:layout_width="30dp"
-                    android:layout_height="140dp"
-                    android:layout_toStartOf="@+id/cart"
-                    android:src="@drawable/ic_search"
-                    android:contentDescription="@string/product_search"/>
-
-                <ImageView
-                    android:id="@+id/cart"
-                    android:layout_width="30dp"
-                    android:layout_height="140dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="0dp"
-                    android:src="@drawable/ic_cart"
-                    android:contentDescription="@string/view_cart"/>
-
-            </RelativeLayout>
-
-        </androidx.appcompat.widget.Toolbar>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="434dp"
+        android:layout_height="68dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <RelativeLayout
-            android:id="@+id/bar"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_below="@+id/toolbar"
-            android:background="@android:color/white">
+            android:layout_height="70dp">
+
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="30dp"
+                android:layout_height="140dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@string/previous_activity"
+                android:src="@drawable/ic_left_arrow" />
 
             <TextView
-                android:id="@+id/txt_delivered"
-                android:layout_width="201dp"
+                android:id="@+id/title_product"
+                android:layout_width="325dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="192dp"
-                android:padding="8dp"
-                android:text="@string/txt_delivered"
-                android:textColor="@android:color/holo_green_light" />
-
-            <TextView
-                android:id="@+id/rate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/nestle_fruita_vitals_pineapple"
                 android:textAlignment="center"
-                android:text="@string/product_rate"
-                android:padding="8dp"
-                android:layout_alignParentRight="true"
-                android:textColor="@android:color/background_dark"/>
-        </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/img_prod"
-            android:layout_width="match_parent"
-            android:layout_height="450dp"
-            android:src="@drawable/pineapple_200ml"
-            android:layout_below="@+id/bar"
-
-            android:contentDescription="@string/product_image" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_below="@+id/img_prod"
-            android:background="@android:color/white">
-
-            <TextView
-                android:id="@+id/prod_name"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:text="Nestle Fruita Vitals Pineapple Juice"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="20sp"
-                android:padding="5dp"/>
-
-            <TextView
-                android:id="@+id/prod_description"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="200ml"
-                android:textColor="@android:color/secondary_text_dark"
-                android:textSize="15sp"
-                android:layout_below="@+id/prod_name"
-                android:padding="5dp"/>
-
-            <TextView
-                android:id="@+id/prod_price"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="Rs 35"
-                android:textColor="@android:color/background_dark"
-                android:textSize="15sp"
-                android:layout_below="@+id/prod_description"
-                android:padding="5dp"/>
-
-            <TextView
-                android:id="@+id/txt_delivery"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_below="@+id/prod_price"
-                android:padding="5dp"
-                android:text="@string/same_day_delivery"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="15sp" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="30dp"
-                android:layout_below="@+id/prod_price"
-                android:layout_alignParentEnd="true"
-                android:background="@android:color/holo_orange_dark"
-                android:text="ADD"
                 android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:layout_marginEnd="10dp"/>
+                android:textSize="20sp" />
 
+            <ImageView
+                android:id="@+id/product_search"
+                android:layout_width="30dp"
+                android:layout_height="140dp"
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@+id/product_cart"
+                android:contentDescription="@string/product_search"
+                android:src="@drawable/ic_search_white" />
+
+            <ImageView
+                android:id="@+id/product_cart"
+                android:layout_width="30dp"
+                android:layout_height="140dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="10dp"
+                android:contentDescription="@string/view_cart"
+                android:src="@drawable/ic_cart" />
 
         </RelativeLayout>
 
+    </androidx.appcompat.widget.Toolbar>
+
+    <RelativeLayout
+        android:id="@+id/bar"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_below="@+id/toolbar"
+        android:background="@android:color/white">
+
+        <TextView
+            android:id="@+id/txt_delivered"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_shopping_basket"
+            android:drawablePadding="10dp"
+            android:padding="8dp"
+            android:text="@string/txt_delivered"
+            android:textColor="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/rate"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
+            android:gravity="center_vertical"
+            android:text="@string/product_rate"
+            android:textColor="@android:color/background_dark"
+            android:textSize="15sp" />
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/img_prod"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_below="@+id/bar"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/white"
+        android:contentDescription="@string/product_image"
+        android:src="@drawable/pineapple_200ml" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_below="@+id/img_prod"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/white"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/prod_name"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:padding="5dp"
+            android:text="@string/nestle_fruita_vitals_pineapple_juice"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/prod_description"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_below="@+id/prod_name"
+            android:padding="5dp"
+            android:text="@string/_200ml"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/prod_price"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_below="@+id/prod_description"
+            android:padding="5dp"
+            android:text="@string/rs_35"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/txt_delivery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/prod_price"
+            android:layout_marginStart="10dp"
+            android:drawableStart="@drawable/ic_motorcycle"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:text="@string/same_day_delivery"
+            android:textColor="@android:color/black"
+            android:textSize="13sp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_below="@+id/prod_price"
+            android:layout_alignParentEnd="true"
+            android:background="@color/colorAccent"
+            android:text="@string/add"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
 
     </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
