--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -37,6 +37,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@android:color/black"
+                android:textColorHint="@android:color/darker_gray"
                 android:textSize="15sp" />
         </RelativeLayout>
 
