--- a/app/src/main/res/layout/cardview_cart.xml
+++ b/app/src/main/res/layout/cardview_cart.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="150dp"
     app:cardElevation="4dp"
     android:layout_marginBottom="8dp">
 
@@ -17,25 +17,24 @@
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="140dp"
-            android:layout_height="150dp"
+            android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:scaleType="centerCrop"
             android:src="@drawable/pineapple_200ml"
-            android:contentDescription="Product image" />
+            android:contentDescription="@string/product_image" />
 
         <TextView
             android:id="@+id/item_name"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="27dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
             android:layout_toEndOf="@+id/item_image"
-            android:gravity="center"
-            android:text="Item Name"
-            android:textColor="@android:color/darker_gray"
+            android:text="@string/name_of_item"
             android:textSize="20sp" />
 
         <TextView
@@ -44,23 +43,24 @@
             android:layout_height="30dp"
             android:layout_below="@+id/item_name"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/item_image"
-            android:gravity="center"
-            android:text="Item Description"
-            android:textColor="@android:color/holo_orange_light"
+            android:text="@string/item_description"
+            android:textColor="@color/promo"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/item_price"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/item_description"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/item_image"
             android:gravity="center"
-            android:text="Price of Item"
+            android:text="@string/price_of_item"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
