--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -16,7 +16,7 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_right_arrow" />
+            android:background="@drawable/ic_right_arrow_blue" />
     </RelativeLayout>
 
     <ImageView
