--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="black">#000000</color>
     <color name="cardview_shadow_end_colour">#03000000</color>
     <color name="temp">#b19cd9</color>
+    <color name="promo">#DBB834</color>
 
 </resources>
