--- a/app/src/main/res/layout/activity_address_and_time.xml
+++ b/app/src/main/res/layout/activity_address_and_time.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_shadow_end_colour"
-    tools:context=".MainActivity">
+    tools:context=".category.activities.MainCategoryActivity">
 
     <TextView
         android:id="@+id/address"
