--- a/app/src/main/res/layout/activity_google_maps.xml
+++ b/app/src/main/res/layout/activity_google_maps.xml
@@ -9,7 +9,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".GoogleMapsActivity" />
+        tools:context=".drawer.activities.GoogleMapsActivity" />
 
     <RelativeLayout
         android:id="@+id/relLayout"
